2007-10-16  Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/NarrativeWeb.py: 0001267: Web report and shared event

2007-10-16  Frederik De	Richter <frederik.de.richter@googlemail.com>
	* src/plugins/rel_nl.py: new version

2007-10-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/WebCal.py: fixed a wrong indent level
	* src/plugins/Calendar.py: handle divorces, weekdays, easter, eval values in XML

2007-10-15  Brian Matherly <brian@gramps-project.org>
	* src/plugins/WebCal.py: Create directory if it doesn't exist.

2007-10-14  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: fix gen calls

2007-10-14 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DataViews/_PedigreeView.py: remove useless commented line

2007-10-14 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DisplayState.py: actiongroup made double, gives warnings (errors) in newer GTK

2007-10-14  Douglas S. Blank <dblank@cs.brynmawr.edu>
	* src/plugins/holidays.xml: Added German holidays (from Mirko Leonhaeuser)

2007-10-13  Douglas S. Blank  <dblank@cs.brynmawr.edu>
        * src/plugins/holidays.xml: Fixed Victoria Day (via James A. Treacy)
        * src/plugins/holidays.xml: Added Swedish official holidays (via Peter L
andgren)

2007-10-13  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/BasicUtils/_NameDisplay.py: Feature Request #1018, optional parens and commas in NameDisplay, new "common" & "initials" keywords, and i18n

2007-10-13  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Utils.py: uses MAX_AGE_PROB_ALIVE, MAX_SIB_AGE_DIFF, MIN_GENERATION_YEARS, AVG_GENERATION_GAP from Config (Bug #1217)
	* src/Config/_GrampsConfigKeys.py: added MAX_AGE_PROB_ALIVE, MAX_SIB_AGE_DIFF, MIN_GENERATION_YEARS, AVG_GENERATION_GAP

2007-10-13  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: no negative years on calendar (no events show before they occur)
	* src/plugins/Calendar.py: uses StringOption in MenuOption