@@ -1,3 +1,6 @@
+2007-10-16  Douglas S. Blank  <dblank@cs.brynmawr.edu>
+	* src/plugins/Calendar.py: Fixed bug with maiden names, added some support for selecting name formats
+
 2007-10-16  Gary Burton <gary.burton@zen.co.uk>
 	* src/plugins/NarrativeWeb.py: 0001267: Web report and shared event
 
